# internal/models/api/films.go
@@ -5,12 +5,14 @@ import (
 	"github.com/e1esm/FilmsAggregator/internal/models/general"
 )
 
+// Film model info
+// @Description model's being operated on
 type Film struct {
-	Title        string        `json:"title"`
-	Crew         *general.Crew `json:"crew"`
-	ReleasedYear int           `json:"released_year"`
-	Revenue      float64       `json:"revenue"`
-	Genre        string
+	Title        string        `json:"title"`         //Title of the show
+	Crew         *general.Crew `json:"crew"`          // Crew that took a part in production
+	ReleasedYear int           `json:"released_year"` //Year the show was released in
+	Revenue      float64       `json:"revenue"`       // Revenue which was received by the show
+	Genre        string        `json:"genre"`         // A genre of the show
 }
 
 func NewFilm(film db.Film) *Film {
